# lists_ms/lists_ms/models.py
@@ -5,13 +5,11 @@ from datetime import datetime
 class List(models.Model):
     id_user = models.IntegerField(null=False)
     name = models.CharField(max_length=255, null=False)
-    comment = models.CharField(max_length=2048, null=True)
+    comment = models.CharField(max_length=2048, null=True, default='')
     estimatedDate = models.DateField(null=True, default=datetime.now )
-    order = models.IntegerField(null=False)
 
 
 class ListPlace(models.Model):
     id_list = models.ForeignKey(List, on_delete=models.CASCADE, null=False, related_name='places')
-    placeLon = models.FloatField(max_length=30, null=False)
-    placeLat = models.FloatField(max_length=30, null=False)
+    id_place = models.IntegerField(null=False, default=1)
 
